# typola

./: .buildinfo  .gitignore  README.md  app.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
_modules/: index.html
_modules/typola/: data_dir.html
_modules/typola/estimators/: base.html  smoothing.html
_modules/typola/models/: conditional.html  distribution.html  marginal.html
_modules/typola/prep/: canonical.html  cldf.html  loaders.html  stores.html
_modules/typola/query/: api.html
_modules/typola/sources/: base.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: typola.rst.txt
_sources/module_docs/typola/: data_dir.rst.txt  estimators.rst.txt  models.rst.txt  prep.rst.txt  query.rst.txt  sources.rst.txt
misc/: example_bakeoff.py
module_docs/: typola.html
module_docs/typola/: data_dir.html  estimators.html  models.html  prep.html  query.html  sources.html
module_docs/typola/estimators/: base.html  smoothing.html
module_docs/typola/models/: conditional.html  distribution.html  marginal.html
module_docs/typola/prep/: canonical.html  cldf.html  loaders.html  stores.html
module_docs/typola/query/: api.html
module_docs/typola/sources/: base.html  catalog.html
semix/: __init__.py  data_dir.py
semix/estimators/: __init__.py  base.py  smoothing.py
semix/models/: __init__.py  conditional.py  distribution.py  marginal.py
semix/prep/: __init__.py  cldf.py  loaders.py  stores.py
semix/query/: __init__.py  api.py
semix/sources/: __init__.py  base.py  catalog.py
tests/: conftest.py  test_api.py  test_estimators.py  test_models.py  test_parameter_conditions.py  test_prep.py  test_query.py  test_stores.py
typola/: __init__.py  data_dir.py
typola/estimators/: __init__.py  base.py  smoothing.py
typola/models/: __init__.py  conditional.py  distribution.py  marginal.py
typola/prep/: __init__.py  canonical.py  cldf.py  loaders.py  stores.py
typola/query/: __init__.py  api.py
typola/sources/: __init__.py  base.py  catalog.py
webapp/: README.md
webapp/api/: __init__.py  deps.py  main.py  schemas.py
webapp/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+41 files in other folders)
