[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semix"
version = "0.0.1"
description = "Probabilistic models over linguistic typology source data (WALS, Grambank, ...) with pluggable count-to-probability estimators."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "typology",
    "wals",
    "grambank",
    "cldf",
    "bayesian",
    "probabilistic-models",
    "linguistics",
]
authors = [{ name = "Thor Whalen" }]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "requests>=2.28",
    "dol>=0.3",
]

[project.optional-dependencies]
bayesian = ["ba>=0.3", "spyn>=0.0.6"]
web = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]
dev = ["pytest>=7", "pytest-cov", "ipykernel", "jupyter"]

[project.urls]
Homepage = "https://github.com/thorwhalen/semix"
Repository = "https://github.com/thorwhalen/semix"

[tool.hatch.build.targets.wheel]
packages = ["semix"]
